<resources>
    <string name="application_label">FrostWire</string>
    <string name="activity_preferences_name">Settings</string>
    <string name="activity_browse_peer_name">Browse Host</string>
    <string name="activity_browse_peers_name">People Nearby</string>
    <string name="activity_chat_name">Chat</string>
    <string name="activity_downloads_name">Active Downloads</string>
    <string name="activity_uploads_name">Active Uploads</string>
    <string name="activity_about">About</string>
    <string name="activity_debug_name">Debug</string>
    <string name="disconnected">Disconnected</string>
    <string name="all_transfers_will_stop_are_you_sure">All transfers will stop.\nAre you sure?</string>
    <string name="connect">Connect</string>
    <string name="connecting">Connecting</string>
    <string name="disconnect">Disconnect</string>
    <string name="disconnecting">Disconnecting</string>
    <string name="wait">Wait</string>
    <string name="exit">Exit</string>
    <string name="no_wifi_want_to_fix_it_question">You\'re not connected to a Wi-Fi network.\n\nHow do you want to connect?</string>
    <string name="your_connection_has_dropped_stopping_services">Your Wi-Fi connection has dropped. Stopping services.</string>
    <string name="wifi_network_changed_restarting_services">The Wi-Fi network has changed. Restarting Services.</string>
    <string name="no_network_connection">No Network Connection</string>
    <string name="leaving_already">Leaving Already?</string>
    <string name="search_label">Search</string>
    <string name="settings_description">Search Settings</string>
    <string name="clear_finished">Clear Finished</string>
    <string name="support_free_software">Support Free Software</string>
    <string name="show_love">Love FrostWire?</string>
    <string name="waiting">Waiting…</string>
    <string name="use_icons_to_browse">Use the icons to browse files.</string>
    <string name="type_to_filter_results">Type to filter results.</string>
    <string name="fetching_file_list">Fetching list of shared</string>
    <string name="not_sharing_files">is not sharing any files.</string>
    <string name="browse_peer">Browse Peer</string>
    <string name="peer">Peer</string>
    <string name="peers">Peers</string>
    <string name="copy">Copy</string>
    <string name="audio">Audio</string>
    <string name="audio_music">Audio/Music</string>
    <string name="video">Video</string>
    <string name="application">Application</string>
    <string name="applications">Apps</string>
    <string name="picture">Picture</string>
    <string name="pictures">Pictures</string>
    <string name="ringtone">Ringtone</string>
    <string name="ringtones">Ringtones</string>
    <string name="document">Document</string>
    <string name="documents">Documents</string>
    <string name="share">Share</string>
    <string name="unshare">Unshare</string>
    <string name="sharing">Sharing</string>
    <string name="send_pm">Send Private Message</string>
    <string name="me">Me</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="download">Download</string>
    <string name="download_selected_files">Download Selected</string>
    <string name="toggle_sharing_selected_files">Toggle Sharing</string>
    <string name="change_manual_listening_port">Set Listening Port 1000 and 65535</string>
    <string name="is_not_responding">%s is not responding</string>
    <string name="max_concurrent_uploads">Maximum Simultaneous Uploads</string>
    <string name="search_no_keywords">Please enter search keywords</string>
    <string name="search_select_filetype">Please select a file type</string>
    <string name="searching_for">Searching for</string>
    <string name="search_for_type_files">Search for %s files</string>
    <string name="update_title">Update time!</string>
    <string name="update_message">FrostWire has downloaded a new PERFORMANCE UPDATE for you, please go ahead and touch the OK button if you want to install it now.</string>
    <string name="next_time">Next Time</string>
    <string name="change_my_nickname">Change my nickname</string>
    <string name="try_changing_your_nickname">Enter your nickname</string>
    <string name="reconnecting">Reconnecting</string>
    <string name="go_to">Go To</string>
    <string name="done">Done</string>
    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="send_to_third_party">Send/Upload</string>
    <string name="send_file_using">Send file using</string>
    <string name="my_files">My Files</string>
    <string name="clear_messages">Clear messages</string>
    <string name="chat_actions">Chat Actions</string>
    <string name="preferences">Settings</string>
    <string name="please_connect">Please connect to use this feature</string>
    <string name="remove">Remove</string>
    <string name="try_valid_port_next_time">Try a valid port next time 1000 and 65500</string>
    <string name="still_listening_on_port">Still listening on port</string>
    <string name="uh_still_listening_on_port">Uh? I\'m still listening on port</string>
    <string name="new_port_saved">New Port saved</string>
    <string name="now_on_port">Now on port</string>
    <string name="stop_all_transfers_message">This will cancel all ongoing and queued downloads. All transferred data will be lost. Are you sure?</string>
    <string name="files">files</string>
    <string name="touch_filetype_icon">Touch icon to change file type</string>
    <string name="tos_title">Terms of Use</string>
    <string name="tos_accept">Accept</string>
    <string name="tos_refuse">Refuse</string>
    <string name="downloads">Downloads</string>
    <string name="minimize_frostwire">Minimize FrostWire</string>
    <string name="are_you_sure_you_wanna_leave">Are you sure you want to go back to the home screen?</string>
    <string name="set_as_wallpaper">Set as Wallpaper</string>
    <string name="failed_to_set_wallpaper">Failed to set Wallpaper</string>
    <string name="tell_others_chooser">Tweet / SMS / Email</string>
    <string name="tell_others_subject">Got FrostWire for Android yet?</string>
    <string name="and_choose_what_filetypes_to_share">Check what types of files you\'d like to enable for sharing on the FrostWire Mobile Network and nearby Wi-Fi enabled Desktops.</string>
    <string name="before_getting_started">Before you get started</string>
    <string name="user_connecting">User connecting</string>
    <string name="accept_connection_from">Accept connection from</string>
    <string name="please_enter_a_number">Please enter a number</string>
    <string name="gotta_have_at_least_one_upload_slot">Gotta have at least one upload slot</string>
    <string name="only_up_to_n_uploads_at_the_same_time">Only up to %s uploads at the same time</string>
    <string name="max_simultaneous_uploads_saved_n">Max Simultaneous Uploads Saved (%s)</string>
    <string name="unknown">Unknown</string>
    <string name="browse">Browse</string>
    <string name="files_shared_by">files shared by</string>
    <string name="mark_your_territory">Mark your Territory</string>
    <string name="get_a_frostwire_tshirt">Get a FrostWire T-Shirt</string>
    <string name="internal_port">Internal Port</string>
    <string name="external_port">External Port</string>
    <string name="device">Device</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="name">Name</string>
    <string name="product">Product</string>
    <string name="model">Model</string>
    <string name="release">Release</string>
    <string name="alpha_tests_team">Alpha Tests Team</string>
    <string name="alpha_tests_team_thanks">Thanks to all our voluntary alpha testers for the patience and great feedback, special thanks to</string>
    <string name="pending">pending</string>
    <string name="manual">manual</string>
    <string name="disabled">disabled</string>
    <string name="open">Open</string>
    <string name="connected_to">Connected to</string>
    <string name="sharing_preferences">Sharing Settings</string>
    <string name="nickname">Nickname</string>
    <string name="how_other_users_will_see_you">How other users will see you</string>
    <string name="networking_preferences">Networking Settings</string>
    <string name="simultaneous_uploads">Simultaneous Wi-fi Uploads</string>
    <string name="simultaneous_uploads_summary">Set how many Wi-fi sharing uploads you want to allow at the same time.</string>
    <string name="send_my_geo_location">Send my Geo-Location</string>
    <string name="send_my_geo_location_summary">Pings will send your approximate Geo Location to find closest peers.</string>
    <string name="use_upnp_port_mapping">Use automatic Port mapping (UPnP)</string>
    <string name="use_upnp_port_mapping_summary">Long Press here to set the manual port number</string>
    <string name="multicast_discovery">Multicast Discovery</string>
    <string name="multicast_discovery_summary">Connect to local Wi-Fi peers via multicast (recommended)</string>
    <string name="broadcast_discovery">Broadcast Discovery</string>
    <string name="broadcast_discovery_summary">Connect to local Wi-Fi peers via broadcast (more traffic on router)</string>
    <string name="internet_discovery">Internet Discovery</string>
    <string name="internet_discovery_summary">Connect to remote peers on the Internet.</string>
    <string name="meter">m</string>
    <string name="kilometer">Km</string>
    <string name="from">From</string>
    <string name="wants_to_share_a_file">wants to share a file</string>
    <string name="translators">Translators</string>
    <string name="tip_rename_your_files">Tip: Rename files so they can be found</string>
    <string name="other_settings">Other Settings</string>
    <string name="vibrate_on_finished_download">Vibrate when download finishes</string>
    <string name="use_mobile_data">Use 3G/4G for BitTorrent</string>
    <string name="use_mobile_data_summary">Use mobile network for BitTorrent downloads. Data Overage charges may apply. Use carefully.</string>
    <string name="connected_using_dataplan">Connected using Data Plan</string>
    <string name="send_to_chat">Send to Chat</string>
    <string name="sent_file_to_chat">Sent file to Chat</string>
    <string name="sent_files_to_chat">Sent %d files to Chat</string>
    <string name="choose_wifi_network">Choose a Wi-Fi network</string>
    <string name="please_update_to_v">Please Update to v. %s</string>
    <string name="cant_open_file">Sorry, don\'t know how to open this file.</string>
    <string name="downloading_from_desktop">Downloading file(s) from desktop</string>
    <string name="share_indication_dialog_title">How to Share/Unshare files</string>
    <string name="dialog_share_indicator_text_text">Browse yourself, Share or Unshare multiple files using the check boxes then touching any checked file.\n\nUse the padlock icons to share or unshare individual files.</string>
    <string name="dialog_share_indicator_check_text">Show this help next time</string>
    <string name="show_share_indication">Show Sharing Help</string>
    <string name="download_added_to_queue">1 file will start downloading</string>
    <string name="downloads_added_to_queue">%s files will start downloading</string>
    <string name="activity_downloads_title_text">Downloads</string>
    <string name="activity_uploads_title_text">Uploads</string>
    <string name="updating">Updating</string>
    <string name="dummy_title" translatable="false">[Title]</string>
    <string name="no_results_feedback">No results were found.</string>
    <string name="help_translate_frostwire">Help translate FrostWire</string>
    <string name="free_sponsored_app">Free Sponsored App</string>
    <string name="dummy_build" translatable="false">[build number]</string>
    <string name="try_other_keywords">Try less/other keywords</string>
</resources>