<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Created by Angel Leon (@gubatron), Alden Torres (aldenml)
 * Copyright (c) 2011-2015, FrostWire(R). All rights reserved.
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="vertical"
    android:background="@color/body_background_gray" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal"
                android:padding="0dp">
            <TextView
                    android:id="@+id/fragment_about_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_title"
                    android:textSize="25sp"
                    android:layout_weight="1.0"
                    android:textStyle="bold"/>

            <TextView
                    android:id="@+id/fragment_about_build_number"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="@string/dummy_build"
                    android:textSize="15dp"
                    android:layout_marginBottom="-5dp"
                    android:layout_marginTop="-7dp"
                    android:textColor="@color/basic_blue"
                    ></TextView> <!-- gravity=top does not work (lousy google-quality apis suck)-->
        </LinearLayout>


        <Button
            android:id="@+id/fragment_about_help_translate_frostwire_button"
            style="@style/BlueButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/help_translate_frostwire" />

        <TextView
            android:id="@+id/fragment_about_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dummy_title" />
    </LinearLayout>

</ScrollView>