<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Created by Angel Leon (@gubatron), Alden Torres (aldenml)
 * Copyright (c) 2011, 2012, FrostWire(R). All rights reserved.
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff6f6f6"
    android:gravity="center_horizontal"
    android:orientation="vertical" >
    
    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:gravity="top"
                  android:layout_marginBottom="20dp">
        <TextView android:id="@+id/view_search_progress_try_other_keywords" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center_horizontal" android:text="@string/try_other_keywords" android:textSize="20sp" android:textStyle="bold" android:layout_marginTop="20dp" android:layout_marginBottom="10dp"/>

        <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal" android:layout_gravity="center_horizontal" android:gravity="center_horizontal" android:padding="0dp" android:layout_weight="0">
            <Button android:layout_weight="0" android:layout_marginLeft="3dp" android:id="@+id/view_search_progress_retry_button_1" android:text="foo man chu fu" style="@style/SearchProgressViewRetryButton"/>
            <Button android:layout_weight="0" android:id="@+id/view_search_progress_retry_button_2" android:text="foo man chu" style="@style/SearchProgressViewRetryButton"/>
            <Button android:layout_weight="0" android:id="@+id/view_search_progress_retry_button_3" android:text="foo man" style="@style/SearchProgressViewRetryButton"/>
            <Button android:layout_weight="0" android:id="@+id/view_search_progress_retry_button_4" android:text="foo" style="@style/SearchProgressViewRetryButton"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:gravity="center">
        <TextView
                android:id="@+id/view_search_progress_text_no_results_feedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_results_feedback"
                android:textSize="18sp"
                android:visibility="gone" />

        <ProgressBar
                android:id="@+id/view_search_progress_progressbar"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        <Button
                android:id="@+id/view_search_progress_button_cancel"
                style="@style/BlueButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:minHeight="45dp"
                android:minWidth="150dp"
                android:text="@android:string/cancel" />

        <Button android:id="@+id/view_search_progress_button_free_apps"
                style="@style/BlueButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:minHeight="45dp"
                android:minWidth="150dp"
                android:text="@string/free_sponsored_app"/>
    </LinearLayout>



</LinearLayout>